[gd_scene load_steps=7 format=2]

[ext_resource path="res://prefabs/quest_utils/TextSign.gd" type="Script" id=1]
[ext_resource path="res://resources/dpcomic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://prefabs/quest_utils/PhrasePlayer.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0823529, 0.647059, 0.952941, 0.282353 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=1]
radius = 140.0

[node name="TextSign" type="Node2D"]
script = ExtResource( 1 )

[node name="PhrasePlayer" type="Node2D" parent="."]
position = Vector2( -96, -20 )
script = ExtResource( 3 )
autoplay_all = false

[node name="Label" type="Label" parent="PhrasePlayer"]
margin_right = 198.0
margin_bottom = 16.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Placeholder"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="PhrasePlayer"]

[node name="Autoplay" type="Timer" parent="PhrasePlayer"]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="SayTimer" type="Timer" parent="."]

[connection signal="tween_completed" from="PhrasePlayer/Tween" to="PhrasePlayer" method="_on_Tween_tween_completed"]
[connection signal="timeout" from="PhrasePlayer/Autoplay" to="PhrasePlayer" method="_on_Autoplay_timeout"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_Area2D_area_shape_exited"]
[connection signal="timeout" from="SayTimer" to="." method="_on_SayTimer_timeout"]
